--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,23 @@
 spring:
   datasource:
-  url: jdbc:h2:tcp://localhost/~/datajpa
-  username: sa
-  password:
-  driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/datajpa
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
-jpa:
-  hibernate:
-    ddl-auto: create
-  properties:
+  jpa:
     hibernate:
-      show_sql: true
-      format_sql: true
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 
+  data:
+    web:
+      pagealbe:
+        default-page-size: 10 #global page size set
+        max-page-size : 2000
 logging.level:
   org.hibernate.SQL: debug
 # org.hibernate.type: trace
